# agent-workflow-starter-kit

./: .gitignore  LICENSE  README.md  dev.sh  format.sh  pyproject.toml
app/: chat.py  gunicorn_conf.py  instrument.py  main.py
app/agents/: agent.py  chat_history.py  flowchart.py  tool_router.py  types.py  weather.py  workflow_base.py
app/embedding/: download_embedding_model.py  embedding_calculator.py
app/steps/: llm_input.py  llm_structured_output.py  llm_tool_input.py  start_to_initial.py  tool_call.py
app/tests/integration/: test_correctness.py
app/tests/tools/: test_query_database.py
app/tools/: get_current_weather.py  query_database.py  tool_base.py
output/: do_we_have_more_users_in_usa_or_eu__Flowchart.html  do_we_have_more_users_in_usa_or_eu__ToolRouter.html  full_Flowchart.html  full_ToolRouter.html  what_is_our_largest_won_opportunity__ToolRouter.html  what_is_the_capital_of_spain__Flowchart.html  what_is_the_capital_of_spain__ToolRouter.html
